<?xml version="1.0" encoding="utf-8"?>


<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KizombaHarmonyMain">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:weightSum="1"
    android:id="@+id/Linear"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="#ffcacaca">
    <!-- TOP MAIN MENU -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/MenuButtonControls"
        android:background="@drawable/menubuttonbar">

        <ImageView
            android:id="@+id/lessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/lessonsbuttonselected"
            android:onClick="menuButtonOperations"
            android:clickable="true" />
        <ImageView
            android:id="@+id/blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/blogbuttonnotselectedgray"
            android:onClick="menuButtonOperations"
            android:clickable="true" />
        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/settingsbuttonnotselectedgray"
            android:onClick="menuButtonOperations"
            android:clickable="true" />
        <ImageView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/aboutusbuttonnotselectedgray"
            android:onClick="menuButtonOperations"
            android:clickable="true" />

    </LinearLayout>
    <!--MAIN MENU-->

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/MenuFlipper">
        <!-- Lessons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/LessonsLinearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/black_overlay"
                android:layout_gravity="center|top"
                android:baselineAligned="false"
                android:id="@+id/LevelDisplay">
                <ImageView
                    android:id="@+id/levelstext"
                    android:layout_width="151dp"
                    android:layout_height="50dp"
                    android:src="@drawable/levelstextwhite"
                    android:background="#8d020000" />
                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/horizontalScrollView"
                    android:fadeScrollbars="false">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00ffffff">

                        <ImageView
                            android:id="@+id/level1"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/level1"
                            android:background="@drawable/levelselect"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level2"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/level2"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level3"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/levelselectlocked"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level4"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/levelselectlocked"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level5"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/levelselectlocked"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level6"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/levelselectlocked"
                            android:onClick="levelOperations" />
                        <ImageView
                            android:id="@+id/level7"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/levelselectlocked"
                            android:onClick="levelOperations" />

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:id="@+id/logoandpagename">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lessons"
                    android:textSize="30dp"
                    android:id="@+id/pagename"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textColor="#ff343335"
                    android:textStyle="bold" />
            </RelativeLayout>
            <ViewFlipper
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/LessonFlipper">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lessonList"
                    android:layout_gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center|center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TBA!"
                        android:textAlignment="center"
                        android:textSize="50dp"
                        android:id="@+id/comingsoon"
                        android:textColor="#af000000"
                        android:gravity="center|center_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true" />
                    </RelativeLayout>

            </ViewFlipper>
        </LinearLayout>
        <!-- Blog -->
        <WebView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blogView">
        </WebView>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/Progress"
            android:gravity="center|center_vertical">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:id="@+id/relativeLayout" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Progress"
                    android:textSize="30dp"
                    android:id="@+id/ProgressTitle"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textColor="#ff343335"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressView"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/relativeLayout" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/AboutUsPage"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="About Us"
                android:id="@+id/aboutustitle"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff020000"
                android:textSize="35sp"
                android:gravity="top"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_below="@+id/aboutustitle"
                android:src="@drawable/kizombaharmonylogo"
                android:layout_above="@+id/kizombaharmonytext"
                android:layout_alignRight="@+id/kizombaharmonytext"
                android:layout_alignEnd="@+id/kizombaharmonytext"
                android:layout_alignLeft="@+id/kizombaharmonytext"
                android:layout_alignStart="@+id/kizombaharmonytext"
                android:contentDescription="kh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="Kizomba Harmony\n"
                android:id="@+id/kizombaharmonytext"
                android:textIsSelectable="true"
                android:gravity="center|center_vertical|center_horizontal|fill|top"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="@string/FacebookLink"
                android:id="@+id/Facebook"
                android:textIsSelectable="true"
                android:linksClickable="true"
                android:gravity="center|center_vertical|center_horizontal|top"
                android:textSize="20sp"
                android:layout_below="@+id/kizombaharmonytext"
                android:clickable="true"
                android:layout_alignLeft="@+id/Instagram"
                android:layout_alignStart="@+id/Instagram"
                android:layout_alignRight="@+id/Instagram"
                android:layout_alignEnd="@+id/Instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="@string/InstagramLink"
                android:id="@+id/Instagram"
                android:textIsSelectable="true"
                android:linksClickable="true"
                android:gravity="center|center_vertical|center_horizontal|top"
                android:textSize="20sp"
                android:layout_below="@+id/Facebook"
                android:layout_centerHorizontal="true"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwitterLink"
                android:id="@+id/Twitter"
                android:layout_below="@+id/Instagram"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:linksClickable="true"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YouTubeLink"
                android:id="@+id/YouTube"
                android:layout_below="@+id/Twitter"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textIsSelectable="true"
                android:linksClickable="true"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="Email: kizombaharmony@gmail.com\n"
                android:id="@+id/email"
                android:textIsSelectable="true"
                android:gravity="center|top"
                android:textSize="20sp"
                android:layout_below="@+id/YouTube"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Need music?"
                android:id="@+id/musicQuery"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="#ff020000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioLink"
                android:id="@+id/CrioloRadio"
                android:layout_below="@+id/musicQuery"
                android:layout_centerHorizontal="true"
                android:textSize="20sp" />

        </RelativeLayout>

        <!-- ABOUT US -->

    </ViewFlipper>

</LinearLayout>

<!-- </android.support.v4.widget.DrawerLayout> -->
